Fix the race between simulateSuccessfulV1Voting and catch-up in unit test

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.12
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • Repl 2016-08-29
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      simulateSuccessfulV1Voting runs until the node enters catch-up mode, but if catch-up is scheduled (using onEvent()) by the DB worker thread after the voting finishes, simulateSuccessfulV1Voting may black hole the replSetGetStatus requests.

            Assignee:
            Siyuan Zhou
            Reporter:
            Siyuan Zhou
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: