SERVER-25550 Fix the race between simulateSuccessfulV1Voting and catch-up in unit test